apps/applications/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
        networking/expose-web-ui: "true"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-type
                    operator: In
                    values:
                      - performance
      terminationGracePeriodSeconds: 30
      containers:
        - name: plex
          image: plexinc/pms-docker
          ports:
            - name: web-ui
              containerPort: 32400
              protocol: TCP
          startupProbe:
            httpGet:
              path: /identity
              port: web-ui
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /identity
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /identity
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: video-series-mount
              mountPath: /tv # Path inside the container
            - name: video-movies-mount
              mountPath: /movies
            - name: video-anime-mount
              mountPath: /anime
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
          resources:
            # only rune on nodes that have Intel GPU
            requests:
              cpu: 1000m
              memory: 2Gi
              gpu.intel.com/i915: "1"
            limits:
              cpu: 8000m
              memory: 8Gi
              gpu.intel.com/i915: "1"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: video-movies-mount
          persistentVolumeClaim:
            claimName: video-movies-pvc
        - name: video-series-mount
          persistentVolumeClaim:
            claimName: video-series-pvc
        - name: video-anime-mount
          persistentVolumeClaim:
            claimName: video-anime-pvc
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-longhorn-pvc
        - name: transcode
          persistentVolumeClaim:
            claimName: plex-transcode-pvc
