apps/applications/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
    - name: web-ui
      port: 32400
    - name: gdm-discovery-1
      protocol: UDP
      port: 32410
    - name: gdm-discovery-2
      protocol: UDP
      port: 32412
    - name: gdm-discovery-3
      protocol: UDP
      port: 32413
    - name: gdm-discovery-4
      protocol: UDP
      port: 32414
    - name: dlna
      protocol: UDP
      port: 1900
