apps/applications/media/plex/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex-policy
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: plex

  egress:
    # Rule: Allow Internet (plex -> Indexers)
    - toEntities:
        - "world"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
  # Allow Ingress (Inbound)
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: sonarr
        - matchLabels:
            app: radarr
        - matchLabels:
            app: overseerr
        - matchLabels:
            app: tautulli
        - matchLabels:
            app: bazarr
        - matchLabels:
            app: posterizarr
        - matchLabels:
            app: home-assistant
            k8s:io.kubernetes.pod.namespace: iot
      toPorts:
        - ports:
            - port: web-ui
              protocol: "TCP"
